# country-decision-atlas-r

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .sqlfluff  AGENTS.md  AUDIT_2026-07-20.md  CHANGELOG.json  CLAUDE.md  CONTRIBUTING.md  FRONTEND_IMPLEMENTATION_PLAN.md  Makefile  README.md  SECURITY.md  audit_result.txt  dev_tools_scripts_runner.py  docker-compose.override.example.yml  docker-compose.prod.yml  docker-compose.yml  full-check.config.json  full-check.ps1  full-check.py  package.json  playwright.config.ts  playwright.visual.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  task-checklist.md
.ai/: README.md
.ai/project/: 10-project-map.md  11-commands.md  12-domain-rules.md  13-progress-tracking.md
.ai/universal/: 01-workflow.md  02-task-checklist.md  03-scope-and-code-style.md  04-architecture-boundaries.md  05-security-and-secrets.md  06-quality-and-testing.md  07-multi-assistant.md
.claude/: README.md  launch.json  settings.json
.claude/agents/: country-atlas-backend-api.md  country-atlas-ci-triage.md  country-atlas-domain-architect.md  country-atlas-frontend-web.md  country-atlas-quality-reviewer.md  country-atlas-repo-maintainer.md
.codex/: README.md  config.toml
.codex/agents/: backend-api.toml  ci-triage.toml  docs-keeper.toml  domain-architect.toml  frontend-web.toml  quality-reviewer.toml  repo-maintainer.toml
.github/workflows/: ci.yml  quality.yml
___/: ARCHITECT_REVIEW.md  IMPLEMENTATION_PLAN.md
apps/api/: Dockerfile  main.py
apps/notifier/: Dockerfile  go.mod  go.sum
apps/web/: eslint.config.mjs  next-env.d.ts  next.config.mjs  package.json  vitest.config.ts  vitest.setup.ts
apps/web-prototype/: index.html  package.json  vite.config.ts
apps/worker/: main.py
contracts/: openapi.yaml
database/migrations/: 001_init.sql  002_seed_initial_data.sql  003_country_decision_engine.sql  003_decision_engine.sql  004_seed_country_decision_data.sql  004_seed_decision_data.sql  005_country_content_decision_logic_v0.sql  005_decision_logic.sql  006_seed_cleanup.sql  006_seed_country_content_decision_logic_v0_cleanup.sql  007_backend_content_management_foundation.sql  007_content_management.sql  008_data_quality.sql  008_data_quality_validation_v1.sql  009_content_depth.sql  009_source_backed_content_depth_v1.sql  010_ru_translation.sql  010_russian_content_translation.sql  011_content_localization_foundation_v1.sql  011_localization.sql  012_performance_and_integrity_v1.sql  012_performance_integrity.sql  013_translation_jobs.sql  013_translation_jobs_worker_foundation_v1.sql  014_translation_jobs_legacy.sql  014_translation_jobs_nullable_legacy_columns.sql  015_cii_country_card.sql  015_cii_country_card_slice_v1.sql  016_cii_seed.sql  016_cii_seed_v1.sql  017_cii_methodology.sql  017_cii_methodology_hardening_v1.sql  018_cii_scenario_weights.sql  018_scenario_specific_cii_weights_v1.sql  019_legal_signals_timeline.sql  019_legal_signals_timeline_v1.sql  020_closeout_data_quality_fixes.sql  020_data_quality_fixes.sql  021_uruguay_evidence_fix.sql  021_uruguay_evidence_gap_fix_v1.sql  (+59 more)
docs/: README.md
docs/_arch_/: 00_Рабочий_стандарт.md  00_Эпизод_0_рабочий_стандарт.md  08_Аудит_проекта.md  08_Открытые_вопросы.md  09_План_реализации_проекта.md  09_План_устранения_аудита.md  README.md  SYNTHETIC_DATA_PLAN.md
docs/api/: overview.md
docs/architecture/: cii-methodology-notes.md  invariants.md  layers-and-boundaries.md  overview.md  rights-and-roles.md  visual-system-and-architecture-notes.md
docs/audit-checklist/: project-audit-checklist.md
docs/decisions/: open-questions.md
docs/operations/: synthetic-data-plan.md  working-standard.md
docs/product/: roadmap.md  vision.md
docs/synthetic_data/: synthetic_data_pipeline_technical_specification.md
scripts/: apply_migrations.py  backup_postgres.py  bootstrap_runtime_read_models.py  cleanup_expired_auth_sessions.py  cleanup_retention.py  create_auth_user.py  dispatch_trip_reminders.py  migration_runner.py  outbox_relay.py  outbox_relay_runner.py  rebuild_search_index.py  recompute_author_reputation.py  recompute_country_drift.py  recompute_platform_metrics.py  recompute_trust_scores.py  restore_postgres_check.py  synthetic_data.py  translation_pipeline_status.py  write_runtime_diagnostics.py
scripts/dev_tools/: README.md  _demo_countries_fixture_spec.py  check_js_budgets.py  contrast_audit.py  export_demo_countries.py  format_code.py  full_check.py  i18n_parity_check.py  restore_demo_countries.py  ship_main.py  sync_agents_md.py
scripts/synthetic_data/: README.md  cli.py
tests/: __init__.py  cache_test_helpers.py  conftest.py  methodology_test_helpers.py  test_admin_community_api.py  test_admin_content_publication_flow.py  test_admin_rbac.py  test_ai_api.py  test_ai_context_repo.py  test_ai_context_repository.py  test_ai_context_service.py  test_ai_data_quality.py  test_ai_decision_intent.py  test_ai_dq.py  test_ai_drafts_api.py  test_ai_drafts_mig.py  test_ai_drafts_migration.py  test_ai_drafts_repo.py  test_ai_drafts_repository.py  test_ai_drafts_service.py  test_ai_explain_number.py  test_ai_feature_flags.py  test_ai_foundation_mig.py  test_ai_foundation_migration.py  test_ai_interactions_repo.py  test_ai_interactions_repository.py  test_ai_provider_foundation.py  test_ai_translation_provider.py  test_analytics_events.py  test_argentina_cii_integration.py  test_argentina_core_country_slice.py  test_argentina_legal_timeline_evidence.py  test_audit_repo.py  test_audit_repository.py  test_auth_api.py  test_auth_data_quality.py  test_auth_dq.py  test_auth_passwords.py  test_auth_sessions.py  test_author_metrics_api.py  (+187 more)
tests/e2e/: web-mvp-ai-assistant.spec.ts  web-mvp-ai-decision-helper.spec.ts  web-mvp-ai-invariants.spec.ts  web-mvp-analytical-pages.spec.ts  web-mvp-analytics.spec.ts  web-mvp-argentina-cii.spec.ts  web-mvp-argentina-core-country.spec.ts  web-mvp-argentina-legal-timeline.spec.ts  web-mvp-auth-rbac.spec.ts  web-mvp-author-metrics.spec.ts  (+34 more)
utils/: __init__.py
(+1468 files in other folders)
