[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "country-decision-atlas"
version = "0.1.0"
description = "Backend, worker, and shared Python packages for Country Decision Atlas."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Country Decision Atlas maintainers" }]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "psycopg[binary,pool]>=3.2.0,<4.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "ruff>=0.6.9,<1.0.0",
]

[tool.setuptools.packages.find]
where = [
  "apps/api",
  "apps/worker",
  "packages/contracts",
  "packages/shared",
]
include = ["country_decision_atlas_*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps", "packages", "scripts"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "E",
  "F",
  "I",
  "N",
  "UP",
  "W",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]
mypy_path = [
  "apps/api",
  "apps/worker",
  "packages/contracts",
  "packages/shared",
]
exclude = [
  "^apps/api/main\\.py$",
  "^apps/worker/main\\.py$",
]
[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = [
  "apps/api",
  "apps/worker",
  "packages/contracts",
  "packages/shared",
]
