[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "country-decision-atlas"
version = "0.1.0"
description = "Backend, worker, and shared Python packages for Country Decision Atlas."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Country Decision Atlas maintainers" }]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.14.2,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "psycopg[binary,pool]>=3.2.0,<4.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0,<2.0.0",
  "pytest>=9.0.3,<10.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "pre-commit>=4.2.0,<5.0.0",
  "ruff>=0.12.0,<1.0.0",
  "sqlfluff>=3.4.0,<4.0.0",
  "httpx2",
]

[tool.setuptools.packages.find]
where = [
  "apps/api",
  "apps/worker",
  "packages/contracts",
  "packages/shared",
]
include = ["country_decision_atlas_*"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["apps/api", "apps/worker"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "C4",
  "ARG",
  "PIE",
  "RUF",
]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"apps/api/app/services/decision_engine.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["app"]
no-sections = true
lines-between-types = 0
lines-after-imports = 2
force-sort-within-sections = true
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]
mypy_path = [
  "apps/api",
  "apps/worker",
  "packages/contracts",
  "packages/shared",
]
exclude = [
  "^apps/api/main\\.py$",
  "^apps/worker/main\\.py$",
]
[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
python_files = ["test_*.py"]
testpaths = ["tests"]
pythonpath = [
  "apps/api",
  "apps/worker",
  "packages/contracts",
  "packages/shared",
]
